# homeai-platform

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Caddyfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  (+11 more)
backend/app/: main.py
backend/tests/: __init__.py  test_agent_runtime.py  test_auth_security.py  test_chat_utils.py  test_csrf.py  test_knowledge_recovery.py  test_llm_provider.py  test_publishing_payload.py  test_rag_quality.py  test_routes_utils.py  test_security.py  test_seed.py  test_trade_tools.py  test_video_generation.py  test_wecom_idempotency.py
docs/: README.md  deploy-cloud.md  foreign-trade-phase2.puml  project_plan_extracted.txt  project_plan_gap_analysis.md  rag-eval-cases.md  sample_kb.txt  schema.sql  video-publish-usage.md  wecom-long-connection.md
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/scripts/: check-mojibake.mjs
frontend/src/: App.tsx  legacy-modules.d.ts  main.tsx  styles.css
integrations/wecom-long-connection/: Dockerfile  package-lock.json  package.json  worker.mjs
scripts/: backup-cloud.sh  check-docker.ps1  check-production-env.sh  check-secrets.ps1  check_deploy_ready.py  clean-local.ps1  deploy-cloud.sh  init-embedding.ps1  migrate.ps1  smoke.ps1  start-dev.ps1
(+103 files in other folders)
