[project]
name = "pinai-ai-platform"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 160
extend-exclude = [
    "chroma_data",
    "frontend",
    "logs",
    "models",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"
